refact: cria página parcial para as features de marketing

--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -457,263 +457,5 @@
 }
 else
 {
-    <div>
-        <div class="px-4 my-5 text-center">
-            <h1 class="display-4 fw-bold">Conheça seu tempo</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Se você não tem acesso regular a sua folha de ponto ou deseja fazer um controle independente da sua jornada de trabalho pra saber se está trabalhando mais ou menos que o tempo previsto então saiba que esse sistema foi feito pra você.</p>
-                @*<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <a class="btn btn-primary btn-lg px-4 me-sm-3" asp-page="/Pontos/Index">Registro de Pontos</a>
-            <a class="btn btn-outline-secondary btn-lg px-4" asp-page="/Perfis/Index">Cadastro de Perfis</a>
-            </div>*@
-            </div>
-            <div class="container px-5">
-                <img src="~/img/apuracao-folha.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Apuração de Folha" width="800" height="500" loading="lazy">
-            </div>
-        </div>
-
-        <div class="px-4 my-5">
-            <h2 class="pb-2 border-bottom">Apuração de Folha</h2>
-
-            <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
-                <div class="d-flex flex-column align-items-start gap-2">
-                    <h3 class="fw-bold">Saiba se você está trabalhando mais ou menos que o tempo previsto</h3>
-                    <p class="text-muted">O backup de comprovantes ou o registro independente de pontos permitem que uma folha de ponto seja apurada por você a qualquer momento.</p>
-                    <a href="https://github.com/mardsystems/MeuPonto/wiki/Features#gest%C3%A3o-de-folhas" target="_blank" class="btn btn-primary btn-lg" title="Documentação">Saiba mais</a>
-                </div>
-                <div class="row row-cols-1 row-cols-sm-2 g-4">
-                    <div class="d-flex flex-column gap-2">
-                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                            <i class="bi bi-collection"></i>
-                        </div>
-                        <h4 class="fw-semibold mb-0">Resumo diário, semanal e mensal</h4>
-                        <p class="text-muted">Tenha sempre o tempo previsto e apurado com a difereça total sempre a mão.</p>
-                    </div>
-
-                    <div class="d-flex flex-column gap-2">
-                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                            <i class="bi bi-lightbulb"></i>
-                        </div>
-                        <h4 class="fw-semibold mb-0">Totais inteligentes</h4>
-                        <p class="text-muted">Identificamos todas as inconsistências dos registros de ponto pra você.</p>
-                    </div>
-
-                    <div class="d-flex flex-column gap-2">
-                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                            <i class="bi bi-people"></i>
-                        </div>
-                        <h4 class="fw-semibold mb-0">Separado por perfil</h4>
-                        <p class="text-muted">Tenha um perfil pra cada perfil ou relação de trabalho que você tiver.</p>
-                    </div>
-
-                    <div class="d-flex flex-column gap-2">
-                        <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                            <i class="bi bi-file-earmark-lock-fill"></i>
-                        </div>
-                        <h4 class="fw-semibold mb-0">Proteção contra alterações</h4>
-                        <p class="text-muted">Apurações salvas com seguraça e protegida quando fechada.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="px-4 my-5">
-            <h2 class="pb-2 border-bottom">A quem se destina</h2>
-            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                <div class="col d-flex align-items-start">
-                    <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <i class="bi bi-building"></i>
-                    </div>
-                    <div>
-                        <h3 class="fs-2">Trabalhadores de empresas</h3>
-                        <p>Funcionários de empresas, estagiários e todos os trabalhadores que prestam serviço para uma pessoa jurídica.</p>
-                        <a href="https://github.com/mardsystems/MeuPonto/wiki/Personas#marcelo" target="_blank" class="btn btn-primary">
-                            Persona Marcelo
-                        </a>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <i class="bi bi-house-door"></i>
-                    </div>
-                    <div>
-                        <h3 class="fs-2">Trabalhadores domésticos</h3>
-                        <p>Empregadas domésticas, motoristas e todos os trabalhadores que prestam serviço para uma pessoa física.</p>
-                        <a href="https://github.com/mardsystems/MeuPonto/wiki/Personas#maria" target="_blank" class="btn btn-primary">
-                            Persona Maria
-                        </a>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <i class="bi bi-car-front"></i>
-                    </div>
-                    <div>
-                        <h3 class="fs-2">Trabalhadores autônomos</h3>
-                        <p>Motoristas de aplicativo, taxistas e todos os trabalhadores que não estão subordinados a ninguém.</p>
-                        <a href="https://github.com/mardsystems/MeuPonto/wiki/Personas#julio" target="_blank" class="btn btn-primary">
-                            Persona Julio
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-            <symbol id="check" viewBox="0 0 16 16">
-                <title>Check</title>
-                <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-            </symbol>
-        </svg>
-
-        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4 fw-normal text-body-emphasis">Preço</h1>
-            <p class="fs-5 text-body-secondary">Não deixe pra depois. Crie agora mesmo sua conta gratuitamente e troque de plano quando achar necessário.</p>
-        </div>
-        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-            <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3">
-                        <h4 class="my-0 fw-normal">
-                            Bronze
-                            <span class="badge rounded-pill" style="color: #cd7f32;">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star"></i>
-                                <i class="bi bi-star"></i>
-                            </span>
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">R$ 0<small class="text-body-secondary fw-light">/mês</small></h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>1 perfil</li>
-                            <li>2 GB de armazenamento/ano</li>
-                            <li>Suporte por email</li>
-                            <li>Ajuda online</li>
-                        </ul>
-                        <a class="w-100 btn btn-lg btn-outline-primary" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Crie uma conta gratuita</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3">
-                        <h4 class="my-0 fw-normal">
-                            Prata
-                            <span class="badge rounded-pill" style="color: #c0c0c0;">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star"></i>
-                            </span>
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">R$ 1,99<small class="text-body-secondary fw-light">/mês</small></h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>Até 10 perfis</li>
-                            <li>10 GB de armazenamento/ano</li>
-                            <li>Suporte prioritário por email</li>
-                            <li>Ajuda online</li>
-                        </ul>
-                        <a class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com?subject=Quero um Plano Prata" target="_blank">Fale conosco</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3 text-bg-primary border-primary">
-                        <h4 class="my-0 fw-normal">
-                            Ouro
-                            <span class="badge rounded-pill" style="color: #ffd700;">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                            </span>
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">R$ 4,99<small class="text-body-secondary fw-light">/mês</small></h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>Perfis ilimitados</li>
-                            <li>20 GB de armazenamento/ano</li>
-                            <li>Suporte por telefone e email</li>
-                            <li>Ajuda online</li>
-                        </ul>
-                        <a class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com?subject=Quero um Plano Ouro" target="_blank" disabled>Em breve</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h2 class="display-6 text-center mb-4">Compare os planos</h2>
-
-        <div class="table-responsive">
-            <table class="table text-center">
-                <thead>
-                    <tr>
-                        <th style="width: 34%;"></th>
-                        <th style="width: 22%;">Bronze</th>
-                        <th style="width: 22%;">Prata</th>
-                        <th style="width: 22%;">Ouro</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row" class="text-start">Apuração de Folha</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">Backup de Comprovantes</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                </tbody>
-
-                <tbody>
-                    <tr>
-                        <th scope="row" class="text-start">Registro de Pontos</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">Cadastro de Perfis</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">Cadastro de Empregadores</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">Sem Anúncios</th>
-                        <td></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                </tbody>
-
-                <tbody class="opacity-50">
-                    <tr>
-                        <th scope="row" class="text-start">App Offline (Em breve)</th>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">App Online (Em breve)</th>
-                        <td></td>
-                        <td></td>
-                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <partial name="_Features" />
 }
