chore!: refina estrutura de dados

--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -424,6 +424,12 @@
                                             }
                                         </ul>
                                     }
+                                    @if (apuracaoDiaria.Observacao != null)
+                                    {
+                                        <div class="card-body">
+                                            <div class="card-text">@apuracaoDiaria.Observacao</div>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                         }
