--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Fechar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Fechar.cshtml
@@ -161,6 +161,10 @@
                                         <dd class="col-sm-4 Falta">
                                             @Html.DisplayFor(model => model.Folha.ApuracaoMensal.Dias[i].Falta)
                                         </dd>
+                                        <dt class="col-sm-7 col-lg-5 Observacao">
+                                            @Html.DisplayNameFor(model => model.Folha.ApuracaoMensal.Dias[i].Observacao)
+                                        </dt>
+                                        <dd class="col-sm-5 col-lg-7 Observacao">@Html.DisplayFor(model => model.Folha.ApuracaoMensal.Dias[i].Observacao)</dd>
                                     </dl>
                                 </div>
                             </div>
