task: esclarece módulos através de agregados

--- a/src/MeuPonto.Web/Pages/Index.cshtml
+++ b/src/MeuPonto.Web/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Timesheet.Models.Pontos
-@using Timesheet.Models.Pontos.Folhas
+@using Timesheet.Models.Folhas
 @model IndexModel
 @{
     ViewData["Title"] = "Home";
